# weed_robot_gazebo

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml  hardware.yaml
launch/: control.launch  gazebo.launch  multirobot.launch
meshes/high/: plant_1.stl  plant_2.stl  plant_3.stl
meshes/low/: plant_1.stl  plant_2.stl  plant_3.stl
meshes/normal/: plant_1.stl  plant_2.stl  plant_3.stl
meshes/very_high/: plant_1.stl  plant_2.stl  plant_3.stl
meshes/very_low/: plant_1.stl  plant_2.stl  plant_3.stl
models/field_ground_plane/: model.config  model.sdf
models/field_ground_plane/materials/scripts/: field_ground_plane.material
rviz/: config.rviz
src/: steer_bot_hardware_gazebo.cpp  world_odom_publisher.cpp
urdf/: gazebo.xacro
utils/: field.world  ground.model  world_generator.py
worlds/: field.world  field_plants.world  obstacles.world  robot.world  small_field.world  small_field_plants.world  test_plants_low.world  test_plants_normal.world  test_plants_very_low.world
